Add missing include to fix build on some systems

BUG:338124